# nix_manim_template

./: .gitignore  README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: main.yml
src/: main.py
